javascript event add here cool

--- a/comments/index.html
+++ b/comments/index.html
@@ -13,7 +13,7 @@
     <div id="tool"></div>
 
     <div id="fool"></div>
-    <script src="comments.js">
+    <script src="string.js">
 
     </script>
 </body>
